# PBL_project_group

backend/: .env.example  Dockerfile  pydantic_settings.py  pyproject.toml  requirements.txt  test.db
backend/app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py
backend/app/routers/: auth.py  claims.py  policies.py  system.py  users.py
backend/app/schemas/: __init__.py  claim.py
backend/app/services/: audit_logger.py  claim_service.py  rate_limiter.py  refresh_token_store.py  risk_client.py  system_service.py  token_blacklist.py
backend/risk_engine/: feature_config.py  ml_model.py  rule_engine.py  schemas.py  scorer.py
backend/risk_engine/artifacts/: best_model.pkl  encoders.pkl  feature_order.json  scaler.pkl
backend/risk_engine/data/: synthetic_claims_v2.csv
backend/scripts/: e2e_test_v2.py  final_system_smoke_test.py  runtime_api_test.py  system_consistency_check.py  test_ml_pipeline.py  train_ml_pipeline.py
docs/: api-documentation-summary.md  architecture-diagram.md  module-explanation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: authService.js  claimService.js  client.js  tokenStorage.js
frontend/src/components/: AppShell.jsx  ClaimCard.jsx  ClaimsTable.jsx  FiltersBar.jsx  HealthBanner.jsx  LoadingSkeleton.jsx  Pagination.jsx  ProtectedRoute.jsx  RiskChart.jsx  StatusChart.jsx
frontend/src/context/: AuthContext.jsx  ToastContext.jsx
frontend/src/hooks/: useClaimHistory.js
frontend/src/pages/: AdminDashboardPage.jsx  ClaimDashboardPage.jsx  (+2 more)
(+1 files in other folders)
