[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "email-validator==2.1.1",
    "fastapi==0.110.3",
    "httpx==0.27.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pymysql==1.1.1",
    "python-jose[cryptography]==3.3.0",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
]
